--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "42videobricks-nodejs-client",
+  "name": "@42videobricks/nodejs-client",
   "version": "1.1.1",
   "description": "Official Node.js client library for 42videobricks API.",
   "license": "MIT",
