--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "42videobricks-nodejs-client",
-  "version": "1.1.1",
+  "name": "@42videobricks/nodejs-client",
+  "version": "1.1.2",
   "description": "Official Node.js client library for 42videobricks API.",
   "license": "MIT",
-  "keywords": [
+"keywords": [
     "42videobricks",
     "video",
     "api",
@@ -12,7 +12,7 @@
     "rest"
   ],
   "main": "dist/index.js",
-  "homepage": "https://github.com/42videobricks/42videobricks-nodejs-client#readme",
+"homepage": "https://github.com/42videobricks/42videobricks-nodejs-client#readme",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/42videobricks/42videobricks-nodejs-client.git"
